objects/CIP_History_Claims_Run_Out__c.object
<CustomObject>
    <fields>
        <fullName>CIP_History_De_Implementation__c</fullName>
        <label>CIP History De-Implementation</label>
        <referenceTo>CIP_History_De_Implementation__c</referenceTo>
        <relationshipLabel>CIP History Claims Run Out</relationshipLabel>
        <relationshipName>CIP_History_Claims_Run_Out</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Claims_Run_Out__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claims Run Out</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Months</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Out_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_De_Implementation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy De-Implementation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CIP History Claims Run Out</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History Claims Run Out Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History Claims Run Out</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>